<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Puzzle Attack</string>
    <string name="app_name2">PUZZLE ATTACK</string>
    <string name="action_settings">Settings</string>  
    <string name="title">Puzzle Attack</string>
    <string name="btn_jouer">JOUER</string>
    <string name="btn_sonoui">SON: OUI</string>
    <string name="btn_sonnon">SON: NON</string>
    <string name="btn_quitter">QUITTER</string>
    <string name="help">AIDE</string>
    <string name="about">A PROPOS !</string>    
</resources>
